# FastAPI-Enterprise-Boilerplate

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .semgrepignore  AGENTS_HISTORY.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  DASHBOARD_VERIFICATION_REPORT.md  Hotspots_RUST.md  LICENSE  MAKEFILE.md  Makefile  NOTICE  PROJECT_STATUS.md  README.md  ROADMAP.md  ROADMAP_v1.0.0.md  SECURITY.md  SECURITY_AUDIT.md  TECHNICAL_DEBT_SPRINTS.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  make.ps1  mypy-report.txt
backend/: .dockerignore  .pytest_bulk_latest.txt  Dockerfile  Dockerfile.prod  README.md  _run_mypy.py  alembic.ini  check_api_keys_columns.py  check_policy.py  cleanup_e2e_users.py  create_test_user.py  fix_passwords.sql  mypy-baseline.json  mypy-report-week3-current.txt  mypy-report-week3-tranche1.txt  mypy-report-week3-tranche2.txt  mypy-report-week3.txt  pyproject.toml  pyrightconfig.json  requirements-prod.txt  requirements.txt  test_dashboard.py  test_rls_isolation.py
backend/alembic/: README  env.py  init.sql  init_prod.sh  init_prod.sql  init_test.sql  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_audit_mfa.py  003_add_chat_notifications.py  004_oauth_sso.py  005_full_text_search.py  006_rls_policies.py  009_add_tenant_columns.py  010_add_avatar_url.py  011_remove_chat_tables.py  012_security_features.py  20260130_121800_add_last_used_ip_to_api_keys.py  20260211_security_hardening.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/middleware/: __init__.py  rate_limit.py
backend/app/api/v1/: __init__.py  router.py
backend/app/application/: __init__.py
backend/app/application/services/: __init__.py  acl_service.py  audit_service.py  chat_service.py  mfa_config_service.py  mfa_service.py  notification_service.py  oauth_service.py
backend/app/application/use_cases/: __init__.py
backend/app/cli/: __init__.py  main.py  utils.py
backend/app/cli/commands/: __init__.py  apikeys.py  database.py  users.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  api_key.py  audit_log.py  base.py  chat_message.py  conversation.py  mfa.py  notification.py  oauth.py  role.py  session.py  tenant.py  user.py
backend/app/domain/exceptions/: __init__.py  base.py
backend/app/domain/ports/: __init__.py  api_key_repository.py  audit_log_repository.py  data_exchange.py  import_export.py  notification_repository.py  oauth_repository.py  reports.py  role_repository.py  search.py  session_repository.py  storage.py  tenant_repository.py  user_repository.py  websocket.py
backend/app/domain/value_objects/: __init__.py  email.py  password.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/auth/: __init__.py  api_key_handler.py  email_otp_handler.py  encryption.py  jwt_handler.py  oauth_providers.py  totp_handler.py
backend/app/infrastructure/cache/: __init__.py  cache_service.py  redis_client.py
backend/app/infrastructure/data_exchange/: __init__.py  advanced_excel_handler.py  csv_handler.py  entities.py  excel_handler.py  generic_exporter.py  generic_importer.py  generic_reporter.py  pdf_handler.py
backend/app/infrastructure/database/: __init__.py  connection.py
backend/app/infrastructure/email/: __init__.py  service.py  templates.py
backend/app/infrastructure/feature_flags/: __init__.py
backend/app/infrastructure/i18n/: __init__.py
backend/app/infrastructure/jobs/: __init__.py
backend/app/infrastructure/monitoring/: __init__.py  metrics_service.py  uptime_tracker.py
backend/app/infrastructure/observability/: __init__.py  logging.py  telemetry.py
backend/app/infrastructure/search/: __init__.py  elasticsearch.py  postgres_fts.py
backend/app/infrastructure/storage/: __init__.py  local.py  s3.py
backend/app/infrastructure/tasks/: __init__.py  queue.py
backend/app/infrastructure/websocket/: __init__.py  memory_manager.py  redis_manager.py
backend/app/middleware/: __init__.py  csrf.py  i18n.py  metrics.py  rate_limit.py  request_id.py  security_headers.py  tenant.py
backend/migrations/: 001_disable_rls.sql  001_enable_rls.sql
backend/scripts/: README.md  __init__.py  audit_scan.py  build_audit_tables.py  check_api_keys_columns.py  check_mypy_baseline.py  check_policy.py  cleanup_e2e_users.py  create_test_user.py  generate_mypy_baseline.py  run_semgrep_isolated.ps1
backend/storage/: .gitignore
backend/tests/: PROGRESS.md  __init__.py  conftest.py  test_rls_isolation.py  test_websocket.py
backend/tests/e2e/: __init__.py  conftest.py  release_critical_nodeids.txt  test_api_keys.py  test_auth_flow.py  test_health_monitoring.py  test_multi_tenant.py  test_oauth_flow.py  test_role_permission_flow.py  test_search_flow.py  test_user_management.py  test_v110_features.py  test_websocket_flow.py
backend/tests/integration/: __init__.py  conftest.py  test_api_validation_real.py  test_auth_endpoints_integration.py  test_cli_apikeys.py  test_cli_database.py  test_cli_integration.py  test_cli_users.py  test_critical_coverage_db.py  test_data_exchange_integration.py  test_endpoints_coverage.py  test_middleware_execution.py  test_oauth.py  test_roles_endpoints_real.py  test_roles_integration.py  test_roles_mfa_chat.py  test_search.py  test_security.py  test_websocket.py
backend/tests/security/: test_security_meta.py
backend/tests/unit/: __init__.py  test_api_keys.py  test_cli_utils.py  test_cli_utils_coverage.py  test_config.py  test_config_extended.py  test_logging.py  test_main.py  test_main_missing_lines.py  test_rate_limit.py  test_tasks.py  test_telemetry.py  test_websocket.py
backend/tests/unit/api/: test_api_key_endpoints.py  test_api_keys_endpoints_extended.py  test_api_keys_schemas.py  test_audit_log_endpoints_coverage.py  test_auth_endpoints.py  test_auth_endpoints_additional.py  test_auth_endpoints_complete.py  test_auth_endpoints_coverage.py  test_auth_endpoints_direct.py  test_auth_extended.py  test_auth_real.py  (+68 more)
(+591 files in other folders)
