[project]
name = "fastapi-enterprise-boilerplate"
version = "1.0.0"
description = "Production-ready FastAPI boilerplate with JWT, ACL, multi-tenant RLS, and hexagonal architecture"
authors = [
    {name = "Sebastián Muñoz", email = "your-email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.40,<3.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.1",
    
    # Validation & Serialization
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-settings>=2.7.1",
    "email-validator>=2.2.0",
    
    # Authentication
    "PyJWT>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.1",
    
    # MFA / Two-Factor Authentication
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    
    # Cache & Rate Limiting
    "redis>=5.2.1",
    
    # Background Tasks
    "arq>=0.26.1",
    
    # Observability
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.1",
    
    # CLI
    "typer[all]>=0.15.1",
    "rich>=13.9.4",
    
    # Email
    "fastapi-mail>=1.4.2",
    "jinja2>=3.1.5",
    
    # i18n / Internationalization
    "babel>=2.16.0",
    
    # Utilities
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.1",
    "factory-boy>=3.3.1",
    "faker>=33.3.1",
    "ruff>=0.9.6",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
]

storage = [
    # S3/MinIO Support
    "boto3>=1.35.99",
]

[project.scripts]
cli = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
